mantenimineto del gestor de prestamos